--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "embedded-react-browser": "^0.0.1",
     "react": "16.13.1",
     "react-chat-widget": "^3.0.5",
     "react-dom": "16.13.1",
     "react-scripts": "4.0.2",
+    "stream-chat-react": "^5.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
